# reactor-uc

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Doxyfile  Justfile  Makefile  README.md  action_8c.html  action_8h.html  action_8h_source.html  annotated.html  builtin__triggers_8c.html  builtin__triggers_8h.html  builtin__triggers_8h_source.html  classes.html  coap__udp__ip__channel_8c.html  coap__udp__ip__channel_8h.html  coap__udp__ip__channel_8h_source.html  connection_8c.html  connection_8h.html  connection_8h_source.html  consts_8h.html  consts_8h_source.html  dir_03dba92332a82a0463e24c024fce88c1.html  dir_1f442ec7720f3b4f9e221da476fba84c.html  dir_3227d14dfed2cdec1448e3d65b32d516.html  dir_4b68c2fef3e151b6b93d5e93b14f1857.html  dir_4b99f344437b875303ac520dc635e3c5.html  dir_5bb9e945cc9aef435f31523b13e2d16c.html  dir_5c5854aff4914d79955c03a6fa615380.html  dir_5f6bb57d5260d1731fbc610d75570e64.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8ddb26891efaa20976fd5cec381d8644.html  dir_8e6f3276553681706e7f91a5e38a8546.html  dir_92db8b5b540ccf5917222063212cf13e.html  dir_9494ca57f07327760d9281afb7705d23.html  dir_aea3fa68ae1a2aa470eb4549832174ed.html  (+282 more)
examples/: CMakeLists.txt  README.md  feedback.c  hello.c  hello_action.c  hello_timer.c  port_ex.c  runAll.sh  shutdown_ex.c  timer_ex.c
examples/common/: timer_source.h
examples/esp-idf/: buildAll.sh
examples/esp-idf/blink/: CMakeLists.txt  main.c
examples/esp-idf/hello/: CMakeLists.txt  main.c
examples/esp32/: buildAll.sh
examples/esp32/blink/: CMakeLists.txt  main.c  sdkconfig
examples/esp32/hello/: CMakeLists.txt  sdkconfig
examples/fed-template/: .gitignore  buildAll.sh
examples/fed-template/src/: MyFed.lf  MyFed.ulf
examples/federated/ethernet/: CMakeLists.txt  prj.conf  west.yml
examples/flexpret/: CMakeLists.txt  buildAll.sh  timer.c
examples/flexpret/src/: HelloFlexPRET.lf  Smoke.lf  Smoke.ulf
examples/freertos/: buildAll.sh
examples/freertos/pico/: CMakeLists.txt
examples/lf/src/: HelloUc.lf
examples/patmos/: CMakeLists.txt  build-helpers.sh  buildAll.sh
examples/patmos/hello/: Makefile  build.sh
examples/patmos/hello_lf/: Makefile  build.sh
examples/patmos/s4noc_fed/: Makefile  build.sh  common_config.h  main.c
examples/patmos/s4noc_fed_3/: Makefile  README.md  build.sh  common_config.h  main.c
examples/patmos/s4noc_fed_lf/: build.sh  gen_main.sh  main.c
examples/patmos/s4noc_fed_lf_3/: build.sh  gen_main.sh
examples/patmos/s4noc_lf/: Makefile  build.sh
examples/patmos/src/: Smoke.lf  main.c
examples/pico/: CMakeLists.txt  blinky.c  buildAll.sh  timer_ex.c
examples/pico/fsw25/: FlightController.lf
examples/posix/: CMakeLists.txt  buildAll.sh  testing_fed_conn.c  testing_fed_conn_receiver.c  testing_fed_conn_sender.c  testing_nanopb.c  testing_posix_tcp_ip_bundle_client.c  testing_posix_tcp_ip_bundle_server.c  testing_posix_tcp_ip_channel_client.c  testing_posix_tcp_ip_channel_server.c  testing_tcp_ip_bundle_server_callback.c  testing_tcp_ip_channel_server_callback.c  timer_ex.c
examples/posix/federated/: CMakeLists.txt  receiver.c  sender.c
examples/posix/hello/: CMakeLists.txt  hello.c
examples/posix/static/: CMakeLists.txt  Connections.c  Connections.h  R1.c  R1.h  R2.c  R2.h  _lf_preamble.h  static_schedule.c  timer_test.c
examples/riot/: README.md  buildAll.sh
examples/riot/blinky/: Makefile  main.c
examples/riot/coap_channel/: Makefile  coap_channel.c  coap_channel.h  coap_udp_ip_channel.c  coap_udp_ip_channel.h  main.c
examples/riot/coap_federated/: build.sh
examples/riot/coap_federated_lf/: Makefile  build.sh
examples/riot/hello/: Makefile  main.c
examples/riot/hello_lf/: Makefile
examples/riot/test_tcp_channel/: Makefile  main.c
examples/riot/testing_posix_tcp_ip_channel_client/: main.c
examples/riot/testing_posix_tcp_ip_channel_server/: Makefile  main.c
examples/riot/testing_tcp_ip_channel_server_callback/: Makefile  main.c
examples/zephyr/: CMakeLists.txt  buildAll.sh  prj.conf
examples/zephyr/basic_federated/: README.md  buildAndFlash.sh
examples/zephyr/blinky/: CMakeLists.txt
examples/zephyr/federated/: CMakeLists.txt
examples/zephyr/federated_receiver/: prj.conf
examples/zephyr/federated_sender/: CMakeLists.txt
examples/zephyr/hello/: CMakeLists.txt  prj.conf
examples/zephyr/hello_lf/: CMakeLists.txt  README.md
examples/zephyr/src/: timer_ex.c
examples/zephyr/timer/: CMakeLists.txt
test/: CMakeLists.txt  action_test.c  coverage.cmake  delayed_conn_test.c  event_queue_test.c  mock.c  physical_action_test.c  port_test.c  reaction_queue_test.c  shutdown_test.c  startup_test.c  timer_test.c  trigger_value_test.c
test/compile/: logging_format_check.cmake  logging_format_mismatch.c  logging_format_valid.c
test/lf/: CMakeLists.txt  Makefile  lf_test_functions.cmake  lf_tests.cmake  run_federated_test.sh
test/lf/src/: Action.lf  Action.ulf  ActionBuffer.lf  ActionBuffer.ulf  ActionOverflow.lf  ActionOverflow.ulf  ArrayPorts.lf  ArrayPorts.ulf  ArrayState.lf  ArrayState.ulf  Bank.lf  Bank.ulf  BankConnected.lf  BankConnected.ulf  BankOfMultiports.lf  BankOfMultiports.ulf  (+150 more)
test/platform/: runAll.sh
test/unit/: CMakeLists.txt  action_buffer_full_defer_test.c  action_buffer_full_drop_test.c  action_buffer_full_replace_test.c  action_buffer_full_update_test.c  action_defer_test.c  action_drop_test.c  action_empty_test.c  action_lib.h  action_microstep_test.c  action_overwrite_test.c  action_replace_test.c  action_test.c  action_update_test.c  clock_sync_startup_test.c  deadline_test.c  delayed_conn_test.c  empty_action_test.c  event_payload_pool_test.c  event_queue_test.c  mock.c  multiple_startup_shutdown_test.c  nanopb_test.c  network_channels_test.c  no_type_action_test.c  physical_action_test.c  physical_clock_test.c  port_test.c  reaction_queue_test.c  request_shutdown_test.c  s4noc_channel_test.c  scheduler_clock_step_test.c  shutdown_test.c  startup_test.c  tag_test.c  tcp_channel_test.c  test_util.h  timer_test.c  trigger_data_queue_test.c  trigger_value_test.c
(+1066 files in other folders)
